// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders correctly message 1`] = `
<div
  className="ChatMessage-messageWrapper-77 ChatMessage-messageWrapperFromMe-78"
>
  <div
    className="MuiAvatar-root-88 MuiAvatar-colorDefault-89"
    style={
      Object {
        "backgroundColor": "#8bc34a",
      }
    }
  >
    T
  </div>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92 ChatMessage-message-79 ChatMessage-messageFromMe-80"
  >
    <div>
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128"
        style={
          Object {
            "color": "#8bc34a",
          }
        }
      >
        test
      </span>
      <pre
        className="MuiTypography-root-118 MuiTypography-body1-127 ChatMessage-content-83"
      >
        test message
      </pre>
    </div>
    <div
      className="ChatMessage-time-84"
    >
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128 MuiTypography-colorTextSecondary-151"
      >
        15:00
      </span>
    </div>
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other users 1`] = `
<div
  className="ChatMessage-messageWrapper-77"
>
  <div
    className="MuiAvatar-root-88 MuiAvatar-colorDefault-89"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92 ChatMessage-message-79"
  >
    <div>
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128"
        style={
          Object {
            "color": "#ffc107",
          }
        }
      >
        someone
      </span>
      <pre
        className="MuiTypography-root-118 MuiTypography-body1-127 ChatMessage-content-83"
      >
        test message
      </pre>
    </div>
    <div
      className="ChatMessage-time-84"
    >
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128 MuiTypography-colorTextSecondary-151"
      >
        15:00
      </span>
    </div>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name in status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-77"
>
  <div
    className="ChatMessage-statusMessage-81"
  >
    <span
      className="MuiTypography-root-118 MuiTypography-caption-128 ChatMessage-statusMessageUser-82"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    test message
    <span
      className="MuiTypography-root-118 MuiTypography-caption-128"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-77"
>
  <div
    className="MuiAvatar-root-88 MuiAvatar-colorDefault-89"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92 ChatMessage-message-79"
  >
    <div>
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128"
        style={
          Object {
            "color": "#ffc107",
          }
        }
      >
        Name Surname
      </span>
      <pre
        className="MuiTypography-root-118 MuiTypography-body1-127 ChatMessage-content-83"
      >
        test message
      </pre>
    </div>
    <div
      className="ChatMessage-time-84"
    >
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128 MuiTypography-colorTextSecondary-151"
      >
        15:00
      </span>
    </div>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-77"
>
  <div
    className="MuiAvatar-root-88 MuiAvatar-colorDefault-89"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92 ChatMessage-message-79"
  >
    <div>
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128"
        style={
          Object {
            "color": "#ffc107",
          }
        }
      >
        Name Surname
      </span>
      <pre
        className="MuiTypography-root-118 MuiTypography-body1-127 ChatMessage-content-83"
      >
        test message
      </pre>
    </div>
    <div
      className="ChatMessage-time-84"
    >
      <span
        className="MuiTypography-root-118 MuiTypography-caption-128 MuiTypography-colorTextSecondary-151"
      >
        15:00
      </span>
    </div>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-77"
>
  <div
    className="ChatMessage-statusMessage-81"
  >
    <span
      className="MuiTypography-root-118 MuiTypography-caption-128 ChatMessage-statusMessageUser-82"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    test message
    <span
      className="MuiTypography-root-118 MuiTypography-caption-128"
    >
      2 days ago
    </span>
  </div>
</div>
`;
